@@ -27,6 +27,8 @@ v0.9 [2016-]
             - added validation of important rule values like: "empty_name" "unique_name" "empty_cat"
             - replaced "listbox:GetSelection()" with "parse_listbox_selection( listbox )"
             - added "need_save.rules" + "empty_name" + "empty_cat" + "unique_name" to return of "validate.rules()"
+            - removed "HandleEvents" event from "HandleChangeTab" events
+            - removed event "wxEVT_CLOSE_WINDOW" from add_taskbar
             - changed maybe some more tiny things :)
 
     - update: "cfg/cfg.lua"  / by jrock
